--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             </div>
             <div id="r"></div>
         </div>
+
+        <div id="third-page">
+            <img id="tp-arrow" src="images/right-arrow.png">
+            <div id="pre"></div>
+            <div id="pre1"></div>
+            <div id="nbd"></div>
+            <div class="quizz">
+                <div class="body"></div>
+                <div class="firstq">
+                    <div id="fq"></div>
+                </div>
+                <div id="b1"></div>
+                <div id="b2"></div>
+                <div id="b3"></div>
+                <div id="b4"></div>
+            </div>
+            <div id="redscreen"></div>
+            <div id="greenscreen"></div>
+        </div>
     </header>
     <script src="app.js"></script>
 </body>
