--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="pre"></div>
             <div id="pre1"></div>
             <div id="nbd"></div>
-            <div class="quizz">
+            <div id="quizz">
                 <div class="body"></div>
                 <div class="firstq">
                     <div id="fq"></div>
