--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div id="third-page">
             <img id="tp-arrow" src="images/right-arrow.png">
-            <div id="pre"></div>
+            <div id="pre"> </div>
             <div id="pre1"></div>
             <div id="nbd"></div>
             <div id="quizz">
@@ -63,5 +63,6 @@
         </div>
     </header>
     <script src="app.js"></script>
+    <script src="cookies.js"></script>
 </body>
 </html> 
