--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                 <div class="firstq">
                     <div id="fq"></div>
                 </div>
-                <div id="b1"><a href="JavaScript:void(0)" id="close">close</a></div>
+                <div id="b1">
+                    <a href="JavaScript:void(0)"></a>
+                </div>
                 <div id="b2"></div>
                 <div id="b3"></div>
                 <div id="b4"></div>
