--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
 
         <div id="third-page">
+            <a href="JavaScript:void(0)"></a>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="pre"> </div>
             <div id="pre1"></div>
@@ -53,9 +54,7 @@
                 <div class="firstq">
                     <div id="fq"></div>
                 </div>
-                <div id="b1">
-                    <a href="JavaScript:void(0)"></a>
-                </div>
+                <div id="b1"></div>
                 <div id="b2"></div>
                 <div id="b3"></div>
                 <div id="b4"></div>
