--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="main-page">
-            <div class="title">Pour Toi ❤️</div>
+            <div class="title">Pofdfur Toi ❤️</div>
             <div class="boxes">
                 <div class="first-box">
                     <a id="firstbody"></a>
