--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         </div>
 
         <div id="third-page">
-            <a href="JavaScript:void(0)"></a>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="pre"> </div>
             <div id="pre1"></div>
@@ -61,6 +60,9 @@
             </div>
             <div id="redscreen"></div>
             <div id="greenscreen"></div>
+            <div id="popupDiv">pop up with stuff in it
+                <a href="JavaScript:void(0)" id="close">close</a>
+            </div>
         </div>
     </header>
     <script src="app.js"></script>
