--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
 
         <div id="third-page">
+            <a href="JavaScript:void(0)"></a>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="pre"> </div>
             <div id="pre1"></div>
