--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="third-box">
                     <a id="thirdbody"></a>
-                    <div class="tb-title">Pour Nos 3 Mois</div>
+                    <div class="tb-title">Pour Nos 1 Mois</div>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
             </div>
             <div id="redscreen"></div>
             <div id="greenscreen"></div>
-            <div id="popupDiv">pop up with stuff in it
+            <div id="messagebox">The content of message box
                 <a href="JavaScript:void(0)" id="close">close</a>
             </div>
         </div>
