--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         </div>
 
         <div id="third-page">
-            <a href="JavaScript:void(0)"></a>
+            <div id="s">The content of message box
+                <a href="JavaScript:void(0)" id="close">close</a>
+            </div>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="pre"> </div>
             <div id="pre1"></div>
@@ -61,9 +63,6 @@
             </div>
             <div id="redscreen"></div>
             <div id="greenscreen"></div>
-            <div id="messagebox">The content of message box
-                <a href="JavaScript:void(0)" id="close">close</a>
-            </div>
         </div>
     </header>
     <script src="app.js"></script>
