--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
         </div>
 
         <div id="third-page">
-            <div id="s">The content of message box
-                <a href="JavaScript:void(0)" id="close">close</a>
-            </div>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="pre"> </div>
             <div id="pre1"></div>
@@ -63,6 +60,9 @@
             </div>
             <div id="redscreen"></div>
             <div id="greenscreen"></div>
+            <div id="popupDiv">poup with stuff in it
+                <a href="JavaScript:void(0)" id="close">close</a>
+            </div>
         </div>
     </header>
     <script src="app.js"></script>
