--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
         </div>
 
         <div id="third-page">
-            <div id="popupDiv">poup with stuff in it
-                <a href="JavaScript:void(0)" id="close">close</a>
-            </div>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="pre"> </div>
             <div id="pre1"></div>
@@ -56,7 +53,7 @@
                 <div class="firstq">
                     <div id="fq"></div>
                 </div>
-                <div id="b1"></div>
+                <div id="b1"><a href="JavaScript:void(0)" id="close"></a></div>
                 <div id="b2"></div>
                 <div id="b3"></div>
                 <div id="b4"></div>
