--- a/index.html
+++ b/index.html
@@ -45,21 +45,23 @@
 
         <div id="third-page">
             <img id="tp-arrow" src="images/right-arrow.png">
-            <div id="pre"> </div>
-            <div id="pre1"></div>
-            <div id="nbd"></div>
-            <div id="quizz">
-                <div class="body"></div>
-                <div class="firstq">
-                    <div id="fq"></div>
+            <div id="quizz-page">
+                <div id="pre"> </div>
+                <div id="pre1"></div>
+                <div id="nbd"></div>
+                <div id="quizz">
+                    <div class="body"></div>
+                    <div class="firstq">
+                        <div id="fq"></div>
+                    </div>
+                    <div id="b1"><a href="JavaScript:void(0)" id="close"></a></div>
+                    <div id="b2"></div>
+                    <div id="b3"></div>
+                    <div id="b4"></div>
                 </div>
-                <div id="b1"><a href="JavaScript:void(0)" id="close"></a></div>
-                <div id="b2"></div>
-                <div id="b3"></div>
-                <div id="b4"></div>
-            </div>
-            <div id="redscreen"></div>
-            <div id="greenscreen"></div>
+                <div id="redscreen"></div>
+                <div id="greenscreen"></div>
+            </div>    
         </div>
     </header>
     <script src="app.js"></script>
