--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p><span id="datetime"></span></p>
             <div class="sp-title">Ouvres-en une par jour.</div>
             <div class="box">
-                <div class="body">
+                <div class="sp-body">
                     <div id="txt"></div>
                 </div>
             </div>
@@ -44,13 +44,14 @@
         </div>
 
         <div id="third-page">
+            <div id="wm"></div>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="quizz-page">
                 <div id="pre"> </div>
                 <div id="pre1"></div>
                 <div id="nbd"></div>
                 <div id="quizz">
-                    <div class="body"></div>
+                    <div class="tp-body"></div>
                     <div class="firstq">
                         <div id="fq"></div>
                     </div>
