--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@
                     <div id="b3"></div>
                     <div id="b4"></div>
                 </div>
-                <div id="redscreen"></div>
-                <div id="greenscreen"></div>
+            </div>    
+        </div>
+
+        <div id="fourth-page">
+            <img id="fp-arrow" src="images/right-arrow.png">
+            <div id="3mt">
+                <div id="f-title"></div>
+                <div class="fp-body">
+                    <div id="f-txt"></div>
+                </div>
             </div>    
         </div>
     </header>
