--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@
     </header>
     <script src="app.js"></script>
     <script src="cookies.js"></script>
+    <script src="questions.js"></script>
 </body>
 </html> 
