--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <div id="main-page">
+        <h1 id="count">0</h1>
             <div class="title">Pour Toi ❤️</div>
             <div class="boxes">
                 <div class="first-box">
@@ -75,5 +76,6 @@
     </header>
     <script src="app.js"></script>
     <script src="cookies.js"></script>
+    <script src="detect.js"></script>
 </body>
 </html> 
