--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
     </header>
     <script src="app.js"></script>
     <script src="cookies.js"></script>
-    <script src="detect.js"></script>
+    <script>
+        const countEl = document.getElementById('count');
+        updateVisitCount();
+        function updateVisitCount() {
+        	fetch('https://api.countapi.xyz/update/ayou/jtm?amount=-1')
+        	.then(res => res.json())
+        	.then(res => {
+        		countEl.innerHTML = res.value;
+        	})
+        }
+</script>
 </body>
 </html> 
