--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="main-page">
-        <div id="count"></div>
+        <div class="count"></div>
             <div class="title">Pour Toi ❤️</div>
             <div class="boxes">
                 <div class="first-box">
@@ -76,16 +76,6 @@
     </header>
     <script src="app.js"></script>
     <script src="cookies.js"></script>
-    <script>
-        const countEl = document.getElementById('count');
-        updateVisitCount();
-        function updateVisitCount() {
-        	fetch('https://api.countapi.xyz/update/ayou/jtm?amount=-1')
-        	.then(res => res.json())
-        	.then(res => {
-        		countEl.innerHTML = res.value;
-        	})
-        }
-</script>
+    <script src="detect.js"></script>
 </body>
 </html> 
