--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="main-page">
-        <div class="count"></div>
+        <div class="count">0</div>
             <div class="title">Pour Toi ❤️</div>
             <div class="boxes">
                 <div class="first-box">
