--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><
 <html>
 <head>
 <title>Ptit Cadeau Pour Ayou</title>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="main-page">
-        <div id="count">0</div>
+        <div id="count"></div>
             <div class="title">Pour Toi ❤️</div>
             <div class="boxes">
                 <div class="first-box">
