--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div id="third-page">
-            <div id="wm"></div>
+            <div id="wm">Les 10m ne sont toujours pas passés</div>
             <img id="tp-arrow" src="images/right-arrow.png">
             <div id="quizz-page">
                 <div id="pre"> </div>
